 (Format: Year/Month/Day)
Changes for 1.0rc3:
*07/01/01:
   * Happy New Year!
   * Don't draw style's menu icon pixmap underneath the program's icon (Mark)
     WinButton.cc
   * Don't run [startup] items in apps file if fluxbox fails to start (Mark)
     fluxbox.cc/hh
   * Don't run [startup] items in apps file on reconfigure (Mark)
     Remember.cc
   * Fix data type of data passed to set _NET_FRAME_EXTENTS (Simon)
     (sf.net #1621980)
     Similar fix for gnome current workspace... remember that XA_CARDINAL
     "32-bit" type is actually a "long array" argument (=64bit on 64 systems)
     Ewmh.cc Gnome.cc
*06/12/31:
   * Update window scroll action (and direction) on reconfigure (Mark)
     Window.cc
   * Update toolbar visibility on reconfigure (Mark)
     Toolbar.cc
*06/12/28:
   * Don't add 2 pixels to a specified toolbar height, bug #1528646 (Mark)
     Toolbar.cc
*06/12/28:
   * Allow focus to revert to stuck windows (Mark)
     FocusControl.cc
*06/12/27:
   * Don't assume "Jump" and "*Hidden" say "yes" in apps file (Mark)
   * Jump to autogrouped windows on another workspace if set to do so in
     apps file (Mark)
     Remember.cc
*06/12/20:
   * Fixed a few bugs with tabbed windows on restart (Mark)
     Window.cc FocusControl.hh
*06/12/19:
   * Little simplification of data structure for keybindings (Mark)
     Side effects:
     - "Mod4 a b" now behaves like "Mod4 a None b" -- in fact, "None" is now
       completely obsolete
     - You can press "Escape" to cancel any Emacs-style keychain in progress
       (unless it's bound to something else)
     - If there is a conflict between bindings, the first one in the file wins
     - Fixes handling of keychains like "Mod4 a Mod1 b"
     - Should fix some issues with "None" modifier
     Keys.cc/hh FbTk/KeyUtil.cc fluxbox.cc
*06/12/18:
   * Rotate items in toolbar the same way as tabs (Mark)
     Toolbar.cc
*06/12/17:
   * Stop cycling focus when any other command is run, e.g. bug #1595336 (Mark)